--- a/package.json
+++ b/package.json
@@ -9,10 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.5.0",
     "expo": "~49.0.8",
+    "expo-linear-gradient": "^12.3.0",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.4",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-animatable": "^1.3.3",
+    "react-native-awesome-alerts": "^2.0.0",
+    "react-native-awesome-component": "^0.2.10",
+    "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-confirmation-code-field": "^7.3.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-floating-label-input": "^1.4.2",
+    "react-native-floating-label-text-input": "^0.1.5",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-mailcore": "^0.1.1",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-modal-selector-searchable": "^2.1.4",
+    "react-native-paper": "^5.10.4",
+    "react-native-pin-view": "^3.0.3",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-screens": "~3.22.0",
+    "react-native-searchable-dropdown": "^1.1.3",
+    "react-native-textinput-effects": "^0.6.3",
+    "react-native-vector-icons": "^10.0.0",
+    "react-navigation-header-buttons": "^11.0.0",
+    "react-navigation-shared-element": "^3.1.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
