--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -17,31 +18,34 @@
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.0",
     "expo": "~49.0.8",
+    "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "^12.3.0",
-    "expo-location": "^16.3.0",
+    "expo-location": "~16.1.0",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.4",
+    "moti": "^0.27.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.6",
     "react-native-animatable": "^1.3.3",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-awesome-component": "^0.2.10",
     "react-native-basic-modal": "^1.0.2",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-confirmation-code-field": "^7.3.1",
+    "react-native-document-picker": "^9.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-floating-label-input": "^1.4.2",
     "react-native-floating-label-text-input": "^0.1.5",
     "react-native-gesture-handler": "^2.12.1",
-    "react-native-mailcore": "^0.1.1",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-selector-searchable": "^2.1.4",
-    "react-native-modal-wrapper": "^3.1.1",
     "react-native-paper": "^5.10.4",
     "react-native-pin-view": "^3.0.3",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-textinput-effects": "^0.6.3",
